--- a/src/test/java/resources/selenide.properties
+++ b/src/test/java/resources/selenide.properties
@@ -1,5 +1,5 @@
 selenide.browser=chrome
 selenide.timeout=6000
-selenide.browserSize=1680x1050
-selenide.startMaximized=false
+selenide.browserSize=1920x1050
+selenide.startMaximized=true
 selenide.pageLoadTimeout=150000
